--- a/index.html
+++ b/index.html
@@ -88,19 +88,19 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		color:#ffffff;
 
 		min-width:30px;
 
-		background:#5489eb;
+		background:#124381;
 
 		border-radius: 15px;
 
-		padding:10px 15px 14px 15px;
+		padding:12.5px 18.75px 17.5px 18.75px;
 
 		margin-right:45px;
 
@@ -124,7 +124,7 @@
 
 		border-right: 10px solid transparent; 
 
-		border-top: 15px solid #5489eb;
+		border-top: 15px solid #124381;
 
 		margin:0 20px;
 
@@ -136,9 +136,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		color:#000000;
 
@@ -148,7 +148,7 @@
 
 		border-radius: 15px;
 
-		padding:10px 15px 14px 15px;
+		padding:12.5px 18.75px 17.5px 18.75px;
 
 		margin-left:45px;
 
@@ -240,7 +240,7 @@
 
 		float:left;
 
-		padding:0 15px;
+		padding:0 18.75px;
 
 	}
 
@@ -252,9 +252,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		width:48%;
 
@@ -262,7 +262,7 @@
 
 		border-radius: 8px;
 
-		padding:10px 0px 12px 0;
+		padding:12.5px 0px 15px 0;
 
 		margin: 0 0 3px 0;
 
@@ -284,9 +284,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		width:48%;
 
@@ -294,7 +294,7 @@
 
 		border-radius: 8px;
 
-		padding:10px 0px 12px 0;
+		padding:12.5px 0px 15px 0;
 
 		margin: 0 0 3px 0;
 
@@ -316,9 +316,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		width:100%;
 
@@ -326,7 +326,7 @@
 
 		border-radius: 8px;
 
-		padding:10px 0px 12px 0;
+		padding:12.5px 0px 15px 0;
 
 		margin: 0 0 8px 0;
 
@@ -348,9 +348,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		width:100%;
 
@@ -358,7 +358,7 @@
 
 		border-radius: 8px;
 
-		padding:10px 0px 12px 0;
+		padding:12.5px 0px 15px 0;
 
 		margin: 0 0 8px 0;
 
@@ -408,9 +408,9 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		background: #fff;
 
@@ -418,7 +418,7 @@
 
 		border-top-right-radius: 8px;
 
-		padding:10px 10px 12px 10px;
+		padding:12.5px 12.5px 15px 12.5px;
 
 		border: solid 0px #888;
 
@@ -444,15 +444,15 @@
 
 		font-family: Verdana, Geneva, sans-serif;
 
-		font-size: 14px;
+		font-size: 16px;
 
-		line-height: 20px;
+		line-height: 25px;
 
 		background: #eee;
 
 		border-radius: 8px;
 
-		padding:10px 0px 12px 0px;
+		padding:12.5px 0px 15px 0px;
 
 		color: #000000;
 
